5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1807_2566.log
== TEST (2019-06-06 17:21:12) 
-- CODE:
from numpy import *
ft = array(eval(input("Digite as faltas dos funcionarios"))
vs = zeros(6, dtype=int)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] == vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] == vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] == vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] == vs[3] + 1
	elif(ft[i] == 6):
		vs[4] == vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] == vs[5] + 1
print(vs)			  
			  
-- ERROR:
File "XXXX", line 3
    vs = zeros(6, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:21:57) 
-- CODE:
from numpy import *
ft = array(eval(input("Digite as faltas dos funcionarios"))

vs = zeros(6, dtype=int)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] == vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] == vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] == vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] == vs[3] + 1
	elif(ft[i] == 6):
		vs[4] == vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] == vs[5] + 1
print(vs)			  
			  
-- ERROR:
File "XXXX", line 4
    vs = zeros(6, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:22:31) 
-- CODE:
from numpy import *
ft = array(eval(input("Digite as faltas dos funcionarios"))

vs = zeros(3, dtype=int)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] == vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] == vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] == vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] == vs[3] + 1
	elif(ft[i] == 6):
		vs[4] == vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] == vs[5] + 1
print(vs)			  
			  
-- ERROR:
File "XXXX", line 4
    vs = zeros(3, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:22:58) 
-- CODE:
from numpy import *

ft = array(eval(input("Digite as faltas dos funcionarios"))

vs = zeros(6, dtype=int)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] == vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] == vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] == vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] == vs[3] + 1
	elif(ft[i] == 6):
		vs[4] == vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] == vs[5] + 1
print(vs)			  
			  
-- ERROR:
File "XXXX", line 5
    vs = zeros(6, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:23:13) 
-- CODE:
from numpy import *

ft = array(eval(input("Digite as faltas dos funcionarios"))

v = zeros(6, dtype=int)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] == vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] == vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] == vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] == vs[3] + 1
	elif(ft[i] == 6):
		vs[4] == vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] == vs[5] + 1
print(vs)			  
			  
-- ERROR:
File "XXXX", line 5
    v = zeros(6, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:24:11) 
-- CODE:
from numpy import *

ft = array(eval(input("Digite as faltas dos funcionarios")))

vec = zeros(6, dtype=int)


for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] == vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] == vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] == vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] == vs[3] + 1
	elif(ft[i] == 6):
		vs[4] == vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] == vs[5] + 1
print(vs)			  
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:24:31) 
-- CODE:
from numpy import *

ft = array(eval(input("Digite as faltas dos funcionarios")))

vs = zeros(6, dtype=int)


for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] == vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] == vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] == vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] == vs[3] + 1
	elif(ft[i] == 6):
		vs[4] == vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] == vs[5] + 1
print(vs)			  
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:24:45) 
-- CODE:
from numpy import *

ft = array(eval(input("Digite as faltas dos funcionarios")))

vs = zeros(6, dtype=int)


for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] == vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] == vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] == vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] == vs[3] + 1
	elif(ft[i] == 6):
		vs[4] == vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] == vs[5] + 1
print(vs)			  
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:24:54) 
-- CODE:
from numpy import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=int)


for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] == vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] == vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] == vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] == vs[3] + 1
	elif(ft[i] == 6):
		vs[4] == vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] == vs[5] + 1
print(vs)			  
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:25:34) 
-- CODE:
from numpy import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=int)


for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] == vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] == vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] == vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] == vs[3] + 1
	elif(ft[i] == 6):
		vs[4] == vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] == vs[5] + 1
print(vs)			  
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:26:54) 
-- CODE:
from numpy import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=int)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] == vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] == vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] == vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] == vs[3] + 1
	elif(ft[i] == 6):
		vs[4] == vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] == vs[5] + 1
print(vs)
print(ft)
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:27:48) 
-- CODE:
from numpy import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=int)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
print(vs)
print(ft)
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:29:10) 
-- CODE:
from numpy import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=int)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
print(vs)

			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:29:33) 
-- CODE:
from numpy import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=int)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
print(total)
print(vs)

			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:32:16) 
-- CODE:
from numpy import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=int)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)

print(vs)

			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:32:54) 
-- CODE:
from numpy import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=int)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)

print(round(vs, 2))

			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:34:22) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=int)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)

print(round(vs, 2))

			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:35:07) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)

print(round(vs, 2))

			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:35:42) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)
vs = round(vs, 2)
print(vs)
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:36:23) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)

print(vs)
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:36:41) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)

print(vs)
			  
-- EXECUTION TIME:
1.07135
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:36:51) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)

print(vs)
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:37:24) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)

print(vs)
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:38:23) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)

print(round(vs, 2))
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:41:30) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)

print(round(vs[i], 2))
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:43:00) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)

print(numpy.round(vs, 2))
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:43:44) 
-- CODE:
import numpy as np
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)

print(np.round(vs, 2))
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:43:54) 
-- CODE:
import numpy as np
from math import *

ft = np.array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)

print(np.round(vs, 2))
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:44:06) 
-- CODE:
import numpy as np
from math import *

ft = np.array(eval(input("Digite as faltas dos funcionarios: ")))

vs = np.zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vs = vs*(100/total)

print(np.round(vs, 2))
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:44:24) 
-- CODE:
import numpy as np
from math import *

ft = np.array(eval(input("Digite as faltas dos funcionarios: ")))

vs = np.zeros(6, dtype=float)

for i in np.range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = np.sum(vs)
vs = vs*(100/total)

print(np.round(vs, 2))
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:44:35) 
-- CODE:
import numpy as np
from math import *

ft = np.array(eval(input("Digite as faltas dos funcionarios: ")))

vs = np.zeros(6, dtype=float)

for i in np.range(np.size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = np.sum(vs)
vs = vs*(100/total)

print(np.round(vs, 2))
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 22:13:20) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vp = vs*(100/total)
for i in vp:
	vp[i] = round(vp[i], 2)
print(vp)	


print(vs, 2)
			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 22:15:33) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vp = vs*(100/total)
for v in range(size(vp)):
	vp[v] = round(vp[v], 2)
print(vp)	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 22:15:55) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vp = vs*(100/total)
for v in range(size(vp)):
	vp[v] = round(vp[v], 2)
print(vp)	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 22:16:26) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vp = vs*(100/total)
for v in range(size(vp)):
	vp[v] = round(vp[v], 1)
print(vp)	  
-- EXECUTION TIME:
1.1993
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
Digite as faltas dos funcionarios: [18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
Digite as faltas dos funcionarios: [ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
Digite as faltas dos funcionarios: [15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 22:16:40) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vp = vs*(100/total)
for v in range(size(vp)):
	vp[v] = round(vp[v], 1)
print(vp)	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 22:17:22) 
-- CODE:
from numpy import *
from math import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vp = vs*(100/total)
for v in range(size(vp)):
	vp[v] = round(vp[v], 1)
print(vp)	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 22:18:48) 
-- CODE:
from numpy import *

ft = array(eval(input("Digite as faltas dos funcionarios: ")))

vs = zeros(6, dtype=float)

for i in range(size(ft)):
	if(ft[i] == 2):
		vs[0] = vs[0] + 1			  
	elif(ft[i] == 3):
		vs[1] = vs[1] + 1			  		  
	elif(ft[i] == 4):
		vs[2] = vs[2] + 1			  		  
	elif(ft[i] == 5):
		vs[3] = vs[3] + 1
	elif(ft[i] == 6):
		vs[4] = vs[4] + 1		  
	elif(ft[i] == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vp = vs*(100/total)
for v in range(size(vp)):
	vp[v] = round(vp[v], 1)
print(vp)	  
-- EXECUTION TIME:
1.18045
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:07:49) 
-- CODE:
from numpy import * #importa a biblioteca para trabalhar com vetores
ft = array(eval(input("Digite as faltas dos funcionarios: "))) #Vetor do historico de faltas
vs = zeros(6, dtype=float) #cria um vetor com 6 posicoes, contendo 0 nessas posicoes

for i in ft: 
	if(i == 2):
		vs[0] = vs[0] + 1			  
	elif(i == 3):
		vs[1] = vs[1] + 1			  		  
	elif(i == 4):
		vs[2] = vs[2] + 1			  		  
	elif(i == 5):
		vs[3] = vs[3] + 1
	elif(i == 6):
		vs[4] = vs[4] + 1		  
	elif(i == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vp = vs*(100/total)
for v in range(size(vp)):
	vp[v] = round(vp[v], 1)
print(vp)	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * #importa a biblioteca para trabalhar com vetores
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:08:11) 
-- CODE:
from numpy import * #importa a biblioteca para trabalhar com vetores
ft = array(eval(input("Digite as faltas dos funcionarios: "))) #Vetor do historico de faltas
vs = zeros(6, dtype=float) #cria um vetor com 6 posicoes, contendo 0 nessas posicoes

for i in ft: 
	if(i == 2):
		vs[0] = vs[0] + 1			  
	elif(i == 3):
		vs[1] = vs[1] + 1			  		  
	elif(i == 4):
		vs[2] = vs[2] + 1			  		  
	elif(i == 5):
		vs[3] = vs[3] + 1
	elif(i == 6):
		vs[4] = vs[4] + 1		  
	elif(i == 7):
		vs[5] = vs[5] + 1
total = sum(vs)
vp = vs*(100/total)
for v in range(size(vp)):
	vp[v] = round(vp[v], 1)
print(vp)	  
-- EXECUTION TIME:
1.03892
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:16:46) 
-- CODE:
from numpy import * #importa a biblioteca para trabalhar com vetores
ft = array(eval(input("Digite as faltas dos funcionarios: "))) #Vetor do historico de faltas
vs = zeros(6, dtype=float) #cria um vetor com 6 posicoes, contendo 0 nessas posicoes

for i in ft: #laco for: le diretamente o elemento
	if(i == 2): #testa a condicao, se verdade
		vs[0] = vs[0] + 1	#incrementa em 1		  
	elif(i == 3): #se falso, testa a condicao seguinte, se verdade
		vs[1] = vs[1] + 1	#incrementa em 1		  		  
	elif(i == 4): #se falso, testa a condicao seguinte, se verdade
		vs[2] = vs[2] + 1	#incrementa em 1		  		  
	elif(i == 5): #se falso, testa a condicao seguinte, se verdade
		vs[3] = vs[3] + 1 #incrementa em 1
	elif(i == 6): #se falso, testa a condicao seguinte, se verdade
		vs[4] = vs[4] + 1	#incrementa em 1	  
	elif(i == 7): #se falso, testa a condicao seguinte, se verdade
		vs[5] = vs[5] + 1 #incrementa em 1
total = sum(vs) #soma o total de faltas para todos os dias da semana
vp = vs*(100/total) #multiplica todos os elementos do vs pela a razao, q da a porcentagem de falta para cada dia da semana
for v in vp: #para a aproximacao das casas decimais eh necessario criar um segundo laco for
	v = round(v, 1) #para cada elemento do laco for, eh feito o arredondamento
print(vp)	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * #importa a biblioteca para trabalhar com vetores
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:17:18) 
-- CODE:
from numpy import * #importa a biblioteca para trabalhar com vetores
ft = array(eval(input("Digite as faltas dos funcionarios: "))) #Vetor do historico de faltas
vs = zeros(6, dtype=float) #cria um vetor com 6 posicoes, contendo 0 nessas posicoes

for i in ft: #laco for: le diretamente o elemento
	if(i == 2): #testa a condicao, se verdade
		vs[0] = vs[0] + 1	#incrementa em 1		  
	elif(i == 3): #se falso, testa a condicao seguinte, se verdade
		vs[1] = vs[1] + 1	#incrementa em 1		  		  
	elif(i == 4): #se falso, testa a condicao seguinte, se verdade
		vs[2] = vs[2] + 1	#incrementa em 1		  		  
	elif(i == 5): #se falso, testa a condicao seguinte, se verdade
		vs[3] = vs[3] + 1 #incrementa em 1
	elif(i == 6): #se falso, testa a condicao seguinte, se verdade
		vs[4] = vs[4] + 1	#incrementa em 1	  
	elif(i == 7): #se falso, testa a condicao seguinte, se verdade
		vs[5] = vs[5] + 1 #incrementa em 1
total = sum(vs) #soma o total de faltas para todos os dias da semana
vp = vs*(100/total) #multiplica todos os elementos do vs pela a razao, q da a porcentagem de falta para cada dia da semana
for v in vp: #para a aproximacao das casas decimais eh necessario criar um segundo laco for
	vp = round(v, 1) #para cada elemento do laco for, eh feito o arredondamento
print(vp)	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * #importa a biblioteca para trabalhar com vetores
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:17:43) 
-- CODE:
from numpy import * #importa a biblioteca para trabalhar com vetores
ft = array(eval(input("Digite as faltas dos funcionarios: "))) #Vetor do historico de faltas
vs = zeros(6, dtype=float) #cria um vetor com 6 posicoes, contendo 0 nessas posicoes

for i in ft: #laco for: le diretamente o elemento
	if(i == 2): #testa a condicao, se verdade
		vs[0] = vs[0] + 1	#incrementa em 1		  
	elif(i == 3): #se falso, testa a condicao seguinte, se verdade
		vs[1] = vs[1] + 1	#incrementa em 1		  		  
	elif(i == 4): #se falso, testa a condicao seguinte, se verdade
		vs[2] = vs[2] + 1	#incrementa em 1		  		  
	elif(i == 5): #se falso, testa a condicao seguinte, se verdade
		vs[3] = vs[3] + 1 #incrementa em 1
	elif(i == 6): #se falso, testa a condicao seguinte, se verdade
		vs[4] = vs[4] + 1	#incrementa em 1	  
	elif(i == 7): #se falso, testa a condicao seguinte, se verdade
		vs[5] = vs[5] + 1 #incrementa em 1
total = sum(vs) #soma o total de faltas para todos os dias da semana
vp = vs*(100/total) #multiplica todos os elementos do vs pela a razao, q da a porcentagem de falta para cada dia da semana
for v in vp: #para a aproximacao das casas decimais eh necessario criar um segundo laco for
	vp = round(v, 1) #para cada elemento do laco for, eh feito o arredondamento
print(vp)	  
-- EXECUTION TIME:
0.980982
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
37.5
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
32.0
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
30.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:18:21) 
-- CODE:
from numpy import * #importa a biblioteca para trabalhar com vetores
ft = array(eval(input("Digite as faltas dos funcionarios: "))) #Vetor do historico de faltas
vs = zeros(6, dtype=float) #cria um vetor com 6 posicoes, contendo 0 nessas posicoes

for i in ft: #laco for: le diretamente o elemento
	if(i == 2): #testa a condicao, se verdade
		vs[0] = vs[0] + 1	#incrementa em 1		  
	elif(i == 3): #se falso, testa a condicao seguinte, se verdade
		vs[1] = vs[1] + 1	#incrementa em 1		  		  
	elif(i == 4): #se falso, testa a condicao seguinte, se verdade
		vs[2] = vs[2] + 1	#incrementa em 1		  		  
	elif(i == 5): #se falso, testa a condicao seguinte, se verdade
		vs[3] = vs[3] + 1 #incrementa em 1
	elif(i == 6): #se falso, testa a condicao seguinte, se verdade
		vs[4] = vs[4] + 1	#incrementa em 1	  
	elif(i == 7): #se falso, testa a condicao seguinte, se verdade
		vs[5] = vs[5] + 1 #incrementa em 1
total = sum(vs) #soma o total de faltas para todos os dias da semana
vp = vs*(100/total) #multiplica todos os elementos do vs pela a razao, q da a porcentagem de falta para cada dia da semana
for v in range(size(vp)): #para a aproximacao das casas decimais eh necessario
	vp[v] = round(vp[v], 1)
print(vp)	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * #importa a biblioteca para trabalhar com vetores
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:18:52) 
-- CODE:
from numpy import * #importa a biblioteca para trabalhar com vetores
ft = array(eval(input("Digite as faltas dos funcionarios: "))) #Vetor do historico de faltas
vs = zeros(6, dtype=float) #cria um vetor com 6 posicoes, contendo 0 nessas posicoes

for i in ft: #laco for: le diretamente o elemento
	if(i == 2): #testa a condicao, se verdade
		vs[0] = vs[0] + 1	#incrementa em 1		  
	elif(i == 3): #se falso, testa a condicao seguinte, se verdade
		vs[1] = vs[1] + 1	#incrementa em 1		  		  
	elif(i == 4): #se falso, testa a condicao seguinte, se verdade
		vs[2] = vs[2] + 1	#incrementa em 1		  		  
	elif(i == 5): #se falso, testa a condicao seguinte, se verdade
		vs[3] = vs[3] + 1 #incrementa em 1
	elif(i == 6): #se falso, testa a condicao seguinte, se verdade
		vs[4] = vs[4] + 1	#incrementa em 1	  
	elif(i == 7): #se falso, testa a condicao seguinte, se verdade
		vs[5] = vs[5] + 1 #incrementa em 1
total = sum(vs) #soma o total de faltas para todos os dias da semana
vp = vs*(100/total) #multiplica todos os elementos do vs pela a razao, q da a porcentagem de falta para cada dia da semana
for v in range(size(vp)): #para a aproximacao das casas decimais eh necessario
	vp[v] = round(vp[v], 1)
print(vp)	  
-- EXECUTION TIME:
0.877419
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
